--- a/VidyaBase/VidyaBase.DAL/VidyaBase.DAL.csproj
+++ b/VidyaBase/VidyaBase.DAL/VidyaBase.DAL.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VidyaBase.DOMAIN\VidyaBase.DOMAIN.csproj" />
+  </ItemGroup>
+
 </Project>
