--- a/VidyaBase/VidyaBase.MOCK/VidyaBase.MOCK.csproj
+++ b/VidyaBase/VidyaBase.MOCK/VidyaBase.MOCK.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.21">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VidyaBase.BLL\VidyaBase.BLL.csproj" />
+    <ProjectReference Include="..\VidyaBase.DAL\VidyaBase.DAL.csproj" />
+    <ProjectReference Include="..\VidyaBase.DOMAIN\VidyaBase.DOMAIN.csproj" />
+  </ItemGroup>
+
 </Project>
