Front-end login, scan & userpage

--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI.Android/VidyaBase.UI.Android.csproj
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI.Android/VidyaBase.UI.Android.csproj
@@ -87,13 +87,25 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\VidyaBase.UI\VidyaBase.UI.csproj">
       <Project>{26CCDC02-7FF6-4E37-9099-AF9E13B35E86}</Project>
       <Name>VidyaBase.UI</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ProfilePic.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\neon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\neonvr.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\vrScan.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Password.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
