--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/VidyaBase.UI.csproj
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/VidyaBase.UI.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Pages\Project\User\EditPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\Project\User\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
