I forgot this existed, considering I only work in Delphi now

--- a/VidyaBase/VidyaBase.RestApi/VidyaBase.RestApi.csproj
+++ b/VidyaBase/VidyaBase.RestApi/VidyaBase.RestApi.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VidyaBase.BLL\VidyaBase.BLL.csproj" />
+    <ProjectReference Include="..\VidyaBase.UI\VidyaBase.UI\VidyaBase.UI.csproj" />
   </ItemGroup>
 
 
