--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/VidyaBase.UI.csproj
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/VidyaBase.UI.csproj
@@ -47,10 +47,16 @@
     <EmbeddedResource Update="Pages\Project\Vidya\AllGamesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\Project\Vidya\CollectionPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\Project\Vidya\ListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\Project\Vidya\ScanPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Pages\Project\Vidya\WishlistPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
