--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI.Android/VidyaBase.UI.Android.csproj
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI.Android/VidyaBase.UI.Android.csproj
@@ -110,5 +110,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\GeoLight.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ControllerIcon.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
